k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: procurement-pal-service
  labels:
    app: procurement-pal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: procurement-pal
